[workspace]

resolver = "2"

members = [
    "crates/relayer",
    "crates/relayer-types",
    "crates/relayer-cli",
    "crates/relayer-rest",
    "crates/telemetry",
    "crates/chain-registry",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "tools/check-guide",
    "tools/query-events",
]

[profile.release]
overflow-checks = true

[patch.crates-io]
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", branch = "romac/tendermint-0.35.0" }
# tendermint                       = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-rpc                   = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-proto                 = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-light-client          = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-light-client-detector = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-testgen               = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
