[workspace]

resolver = "2"

members = [
    "crates/relayer",
    "crates/relayer-types",
    "crates/relayer-cli",
    "crates/relayer-rest",
    "crates/telemetry",
    "crates/chain-registry",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "tools/check-guide",
    "tools/query-events",
]

[workspace.dependencies]
# Hermes dependencies
ibc-relayer-cli      = { version = "1.10.0",  path = "crates/relayer-cli" }
ibc-relayer          = { version = "0.29.0", path = "crates/relayer" }
ibc-relayer-rest     = { version = "0.29.0", path = "crates/relayer-rest" }
ibc-relayer-types    = { version = "0.29.0", path = "crates/relayer-types" }
ibc-chain-registry   = { version = "0.29.0", path = "crates/chain-registry" }
ibc-telemetry        = { version = "0.29.0", path = "crates/telemetry" }
ibc-test-framework   = { version = "0.29.0", path = "tools/test-framework" }
ibc-integration-test = { version = "0.29.0", path = "tools/integration-test" }

# Tendermint dependencies
tendermint                       = { version = "0.37.0", default-features = false }
tendermint-light-client          = { version = "0.37.0", default-features = false }
tendermint-light-client-detector = { version = "0.37.0", default-features = false }
tendermint-light-client-verifier = { version = "0.37.0", default-features = false }
tendermint-proto                 = { version = "0.37.0" }
tendermint-rpc                   = { version = "0.37.0" }
tendermint-testgen               = { version = "0.37.0" }

# Namada dependencies
namada_ibc        = { git = "https://github.com/anoma/namada", rev = "37f00808fcb00b4e850b8070af99593f531db183" }
namada_parameters = { git = "https://github.com/anoma/namada", rev = "37f00808fcb00b4e850b8070af99593f531db183" }
namada_sdk        = { git = "https://github.com/anoma/namada", rev = "37f00808fcb00b4e850b8070af99593f531db183" }
namada_token      = { git = "https://github.com/anoma/namada", rev = "37f00808fcb00b4e850b8070af99593f531db183" }

# Other dependencies
abscissa_core            = "=0.6.0"
anyhow                   = "1.0"
async-stream             = "0.3.5"
async-trait              = "0.1.79"
axum                     = "0.6.18"
bech32                   = "0.9.1"
bitcoin                  = "0.31.2"
bs58                     = "0.5.1"
byte-unit                = { version = "4.0.19", default-features = false }
bytes                    = "1.4.0"
clap                     = "3.2"
clap_complete            = "3.2"
color-eyre               = "0.6"
console                  = "0.15.5"
crossbeam-channel        = "0.5.12"
dashmap                  = "5.4.0"
derive_more              = { version = "0.99.18", default-features = false }
dialoguer                = "0.11.0"
digest                   = "0.10.6"
dirs-next                = "2.0.0"
ed25519                  = "2.2.2"
ed25519-dalek            = "2.0.0"
ed25519-dalek-bip32      = "0.3.0"
env_logger               = "0.11.1"
eyre                     = "0.6.12"
flex-error               = { version = "0.4.4", default-features = false }
futures                  = "0.3.27"
generic-array            = "0.14.7"
hdpath                   = "0.6.3"
hex                      = "0.4.3"
http                     = "0.2.9"
humantime                = "2.1.0"
humantime-serde          = "1.1.1"
ibc-proto                = "0.46.0"
ics23                    = "0.11.1"
itertools                = "0.12.1"
moka                     = "0.12.5"
num-bigint               = "0.4"
num-rational             = "0.4.1"
once_cell                = "1.19.0"
oneline-eyre             = "0.1"
opentelemetry            = "0.19.0"
opentelemetry-prometheus = "0.12.0"
primitive-types          = { version = "0.12.1", default-features = false }
prometheus               = "0.13.4"
prost                    = "0.12"
rand                     = "0.8.5"
regex                    = "1.10.5"
reqwest                  = { version = "0.11.27", default-features = false }
retry                    = { version = "2.0.0", default-features = false }
ripemd                   = "0.1.3"
rpassword                = "5.0.1"
secp256k1                = "0.28.2"
semver                   = "1.0.21"
serde                    = "1.0.203"
serde_derive             = "1.0.104"
serde_json               = "1.0.120"
serde_yaml               = "0.9.34"
serial_test              = "3.1.1"
sha2                     = "0.10.6"
signal-hook              = "0.3.17"
signature                = "2.1.0"
strum                    = "0.25"
subtle-encoding          = "0.5.1"
tempfile                 = "3.10.1"
test-log                 = "0.2.14"
thiserror                = "1.0.61"
time                     = "0.3"
tiny-bip39               = "1.0.0"
tiny-keccak              = { version = "2.0.2", default-features = false }
tokio                    = "1.26.0"
tokio-stream             = "0.1.14"
toml                     = "0.8.14"
tonic                    = "0.11"
tracing                  = { version = "0.1.36", default-features = false }
tracing-subscriber       = "0.3.14"
uint                     = "0.9"
uuid                     = "1.9.1"

[profile.release]
overflow-checks = true

[patch.crates-io]
# tendermint                       = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-rpc                   = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-proto                 = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-light-client          = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-light-client-detector = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
# tendermint-testgen               = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
