[package]
name = "chain-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_json = "1"
futures = { version = "0.3.19", features = ["executor"] }
http = "0.2"
reqwest = { version = "0.11.8", features = ["json"] }
flex-error = { version = "0.4.4", default-features = false }
tendermint-rpc = { version = "0.23.8", features = ["websocket-client"] }
url = "2.2.2"
tokio = "1.17.0"
toml = "0.5.8"
