[package]
name = "ibc-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
syn = { version = "1.0.99", features = ["extra-traits", "full", "derive", "parsing"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"
convert_case = "0.6.0"
proc-macro-crate = "1.2.1"

[lib]
proc-macro = true
