[package]
name = "gm-connector"
version = "0.1.0"
edition = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "gm", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    Implementation of a Gaiad Manager connector library in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
serde_derive = "1"
serde_json = "1"
