[package]
name         = "ibc-chain-registry"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["cosmos", "ibc", "relayer", "chain", "registry", "hermes"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Service to fetch data from the chain-registry
"""

[dependencies]

ibc              = { version = "0.19.0", path = "../modules", features = ["std"] }
ibc-proto        = { version = "0.20.0", path = "../proto" }

async-trait = "0.1.57"
flex-error  = { version = "0.4.4", default-features = false }
futures     = { version = "0.3.24", features = ["executor"] }
http        = "0.2"
reqwest     = { version = "0.11.8", features = ["json"] }
serde       = "1.0.133"
serde_json  = "1"
tokio       = "1.17.0"
toml        = "0.5.8"
url         = "2.2.2"
tracing     = "0.1.36"

[dependencies.tendermint-rpc]
version = "=0.23.9"
features = ["http-client", "websocket-client"]

