[package]
name         = "ibc"
version      = "0.15.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
description  = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "flex-error/std",
    "flex-error/eyre_tracer",
    "ibc-proto/std",
    "ics23/std",
    "clock",
    "beefy-client/std",
    "sp-runtime/std",
    "sp-core/std",
    "codec/std",
    "pallet-mmr-primitives/std",
    "beefy-client-primitives/std",
    "sp-trie/std",
    "sp-io/std",
    "sp-std/std",
    "tendermint-rpc"
]
clock = ["tendermint/clock", "time/std"]

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["tendermint-testgen", "clock", "std", "sha3", "ripemd", "ics11_beefy"]
ics11_beefy = ["sp-io", "sp-core", "sp-std", "beefy-primitives", "sp-runtime", "sp-trie", "pallet-mmr-primitives", "beefy-client", "beefy-client-primitives"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
borsh = { version = "0.9.3", default-features = false }
ibc-proto = { version = "0.18.0", path = "../proto", default-features = false }
ics23 = { git = "https://github.com/composablefi/ics23", rev = "b500a5c6068eb53c83c4c6c13bd9d8c25e0bf927", default-features = false }
time = { version = "0.3", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
tracing = { version = "0.1.34", default-features = false }
prost = { version = "0.10", default-features = false }
prost-types = { version = "0.10", default-features = false }
bytes = { version = "1.1.0", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
uint = { version = "0.9", default-features = false }
beefy-client = { package = "beefy-generic-client",  git = "https://github.com/ComposableFi/beefy-rs", rev = "6b99ac5459caaa1baf94cafa208fffe8e9dd0b54", default-features = false, optional = true }
beefy-client-primitives = { package = "primitives", git = "https://github.com/ComposableFi/beefy-rs", rev = "6b99ac5459caaa1baf94cafa208fffe8e9dd0b54", default-features = false, optional = true }
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
sha3 = { version = "0.10.1", optional = true }
ripemd = { version = "0.1.1", optional = true }

primitive-types = { version = "0.11.1", default-features = false, features = ["serde_no_std"] }


[dependencies.tendermint]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
default-features = false

[dependencies.tendermint-proto]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
default-features = false

[dependencies.tendermint-light-client-verifier]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
default-features = false

[dependencies.tendermint-rpc]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
optional = true

[dependencies.tendermint-testgen]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
optional = true
default-features = false

[dev-dependencies]
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.2" }
tendermint-rpc = { git = "https://github.com/composableFi/tendermint-rs", rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8", features = ["http-client", "websocket-client"] }
tendermint-testgen = { git = "https://github.com/composableFi/tendermint-rs", rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8" } # Needed for generating (synthetic) light blocks.
# Beefy Light Client testing dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24"}
subxt = "0.22.0"
tokio = { version = "1.17.0", features = ["full"] }
serde_json = "1.0.74"
beefy-client = { package = "beefy-generic-client",  git = "https://github.com/ComposableFi/beefy-rs", rev = "6b99ac5459caaa1baf94cafa208fffe8e9dd0b54" }
beefy-queries = { git = "https://github.com/ComposableFi/beefy-rs", rev = "6b99ac5459caaa1baf94cafa208fffe8e9dd0b54" }
sha3 = { version = "0.10.1" }
ripemd = { version = "0.1.1" }

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks"]
