[package]
name         = "ibc"
version      = "0.19.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["flex-error/std", "flex-error/eyre_tracer", "ibc-proto/std", "clock"]
clock = ["tendermint/clock", "time/std"]

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["tendermint-testgen", "clock", "std"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.20.1", path = "../proto", default-features = false }
ics23 = { version = "=0.8.1", default-features = false, features = ["host-functions"] }
time = { version = ">=0.3.0, <0.3.12", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
erased-serde = { version = "0.3", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.36", default-features = false }
prost = { version = "0.11", default-features = false }
bytes = { version = "1.2.1", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
sha2 = { version = "0.10.5", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
uint = { version = "0.9", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = ["serde_no_std"] }
dyn-clone = "1.0.8"

[dependencies.tendermint]
version = "=0.23.9"
default-features = false

[dependencies.tendermint-proto]
version = "=0.23.9"
default-features = false

[dependencies.tendermint-light-client-verifier]
version = "=0.23.9"
default-features = false

[dependencies.tendermint-testgen]
version = "=0.23.9"
optional = true
default-features = false

[dev-dependencies]
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.5" }
tendermint-rpc = { version = "=0.23.9", features = ["http-client", "websocket-client"] }
tendermint-testgen = { version = "=0.23.9" } # Needed for generating (synthetic) light blocks.

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks"]
