[package]
name    = "ibc-proto-compiler"
version = "0.2.0"
authors = ["Greg Szabo <greg@philosobear.com>"]
edition = "2018"
publish = false

[dependencies]
git2 = "0.13"
prost-build = { package = "informalsystems-prost-build", version = "0.8.1", default-features = false }
tempdir = "0.3.7"
walkdir = "2.3"
argh = "0.1.3"
tonic = { package = "informalsystems-tonic", version = "0.5.2" }
tonic-build = { package = "informalsystems-tonic-build", version = "0.5.2" }
