[package]
name    = "ibc-proto-compiler"
version = "0.2.0"
authors = ["Greg Szabo <greg@philosobear.com>"]
edition = "2018"
publish = false

[dependencies]
git2 = "0.13"
prost-build = { package = "informalsystems-prost-build", version = "0.8" }
tempdir = "0.3.7"
walkdir = "2.3"
argh = "0.1.3"
tonic = { package = "informalsystems-tonic", path = "../../tonic/tonic", version = "0.5" }
tonic-build = { package = "informalsystems-tonic-build", path = "../../tonic/tonic-build", version = "0.5" }
