[package]
name         = "ibc-proto-compiler"
version      = "0.3.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
publish      = false
rust-version = "1.60"

[dependencies]
git2        = "0.13"
prost-build = "0.10.1"
tempdir     = "0.3.7"
walkdir     = "2.3"
argh        = "0.1.3"
tonic       = "0.7"
tonic-build = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
