[package]
name = "ibc-proto-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"

ibc-proto = { version = "0.9.0", path = "../proto" }

[dependencies.tendermint-proto]
version = "=0.21.0"