[package]
name         = "ibc-proto"
version      = "0.16.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/informalsystems/ibc-rs/tree/master/proto"
readme       = "README.md"
categories   = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords     = ["blockchain", "cosmos", "tendermint", "ibc", "proto"]
exclude      = ["definitions"]
rust-version = "1.58"
description  = """
    ibc-proto is a Rust implementation of the Cosmos SDK & IBC proto structs
"""

[lib]
name = "ibc_proto"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
bytes = { version = "1.1", default-features = false }
tonic = { version = "0.6", optional = true, default-features = false }
serde = { version = "1.0", default-features = false }

[dependencies.tendermint-proto]
version = "=0.23.5"
default-features = false

[features]
default = ["std"]
std = ["tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
