[package]
name         = "ibc-proto"
version      = "0.20.1"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/informalsystems/ibc-rs/tree/master/proto"
readme       = "README.md"
categories   = ["cryptography::cryptocurrencies", "encoding", "no-std"]
keywords     = ["blockchain", "cosmos", "tendermint", "ibc", "proto"]
exclude      = ["definitions"]
rust-version = "1.60"
description  = """
    ibc-proto provides Cosmos SDK & IBC Protocol Buffers definitions
"""

[lib]
name = "ibc_proto"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost       = { version = "0.11", default-features = false }
bytes       = { version = "1.2", default-features = false }
tonic       = { version = "0.8", optional = true, default-features = false }
serde       = { version = "1.0", default-features = false }
schemars    = { version = "0.8", optional = true }
subtle-encoding = { version = "0.5", default-features = false }
base64      = { version = "0.13", default-features = false, features = ["alloc"] }
flex-error = { version = "0.4.4", default-features = false }

[dependencies.tendermint-proto]
version          = "=0.23.9"
default-features = false

[features]
default     = ["std", "client"]
std         = []
client      = ["std", "tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
json-schema = ["std", "schemars"]
server      = ["std", "tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
