[package]
name       = "ibc-relayer-cli"
version    = "0.9.0"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.56"
description  = """
  Hermes is an IBC Relayer written in Rust
"""
default-run = "hermes"

[[bin]]
name = "hermes"

[features]
default     = ["telemetry", "rest-server", "std", "eyre_tracer",]
std         = ["flex-error/std"]
eyre_tracer = ["flex-error/eyre_tracer"]
profiling   = ["ibc-relayer/profiling"]
telemetry   = ["ibc-relayer/telemetry", "ibc-telemetry"]
rest-server = ["ibc-relayer-rest"]

[dependencies]
ibc              = { version = "0.9.0", path = "../modules" }
ibc-relayer      = { version = "0.9.0", path = "../relayer" }
ibc-proto        = { version = "0.13.0", path = "../proto" }
ibc-telemetry    = { version = "0.9.0", path = "../telemetry", optional = true }
ibc-relayer-rest = { version = "0.9.0", path = "../relayer-rest", optional = true }

clap = { version = "=3.0.0-beta.5" }
serde = { version = "1.0", features = ["serde_derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["fmt", "env-filter", "json"]}
eyre = "0.6.5"
color-eyre = "0.5"
oneline-eyre = "0.1"
futures = "0.3.17"
toml = "0.5.8"
serde_derive = "1.0.116"
serde_json = "1"
prost = { version = "0.9" }
prost-types = { version ="0.9" }
hex = "0.4"
crossbeam-channel = "0.5.1"
subtle-encoding = "0.5"
dirs-next = "2.0.0"
itertools = "0.10.1"
atty = "0.2.14"
flex-error = { version = "0.4.4", default-features = false, features = ["std", "eyre_tracer"] }
signal-hook = "0.3.10"

[dependencies.tendermint-proto]
version = "=0.23.1"

[dependencies.tendermint]
version = "=0.23.1"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "=0.23.1"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client]
version = "=0.23.1"
features = ["unstable"]

[dependencies.abscissa_core]
version = "=0.6.0-pre.2"
features = ["options"]

[dev-dependencies]
abscissa_core = { version = "=0.6.0-pre.2", features = ["testing"] }
once_cell = "1.8"
regex = "1.5"
